# windows_support

./: .bazelrc  .typos.toml  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md
.bcr/: metadata.template.json
.github/workflows/: ci.yaml  publish.yaml  release.yaml  release_prep.sh
e2e/msvc_runtime_lazy/: BUILD.bazel  MODULE.bazel  README.md
e2e/smoke/: .bazelrc  BUILD.bazel  MODULE.bazel
extensions/: BUILD.bazel  common.bzl  msvc_runtime.bzl  windows_sdk.BUILD.bazel
windows/: BUILD.bazel  extensions.bzl
windows/private/extensions/: BUILD.bazel  common.bzl  msvc_runtime.BUILD.bazel  msvc_runtime.bzl  windows_sdk.BUILD.bazel  windows_sdk.bzl
