load("@bazel_lib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//windows/private/extensions:common",
        "//windows/private/extensions:msvc_runtime",
        "//windows/private/extensions:windows_sdk",
        "@bazel_tools//tools/build_defs/repo:cache.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)
