load("@bazel_lib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "msvc_runtime",
    srcs = ["msvc_runtime.bzl"],
    visibility = ["//windows:__subpackages__"],
    deps = [":common"],
)

bzl_library(
    name = "windows_sdk",
    srcs = ["windows_sdk.bzl"],
    visibility = ["//windows:__subpackages__"],
    deps = [":common"],
)

bzl_library(
    name = "common",
    srcs = ["common.bzl"],
    visibility = ["//windows:__subpackages__"],
)
